rename : modules to align with technology used